--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "lint": "eslint .",
     "test": "jest",
-    "validate": "yarn list"
+    "validate": "yarn list",
+    "configure": "simple-git-hooks"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,15 @@
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.23.0",
     "jest": "^26.6.3",
+    "lint-staged": "^10.5.4",
+    "simple-git-hooks": "^2.2.0",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --fix"
   }
 }
