--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,16 @@
 {
-    "parser": "@typescript-eslint/parser",
-    "extends": [
-      "plugin:@typescript-eslint/recommended"
-    ],
+  "extends": [
+    "airbnb-typescript/base"
+  ],
+  "parser": "@typescript-eslint/parser",
     "parserOptions": {
       "ecmaVersion": 2019,
-      "sourceType": "module"
+      "sourceType": "module",
+      "project": "./tsconfig.json"
     },
     "rules": {
-    }
-   }
+    },
+    "ignorePatterns": [
+      "jest.config.js"
+    ]
+}
