--- a/package.json
+++ b/package.json
@@ -26,16 +26,21 @@
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.23.0",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "simple-git-hooks": "^2.2.0",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.3"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
   },
   "lint-staged": {
     "*.ts": "eslint --cache --fix"
+  },
+  "dependencies": {
+    "eslint-config-airbnb-typescript": "^12.3.1"
   }
 }
