--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "madge": "^4.0.2",
     "simple-git-hooks": "^2.2.0",
     "ts-jest": "^26.4.4",
     "typescript": "^4.2.3"
@@ -41,6 +42,8 @@
     "*.ts": "eslint --cache --fix"
   },
   "dependencies": {
-    "eslint-config-airbnb-typescript": "^12.3.1"
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "inversify": "^5.0.5",
+    "require-json5": "^1.1.0"
   }
 }
