--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint .",
-    "test": "jest",
+    "test": "jest --collect-coverage",
     "validate": "yarn list",
     "configure": "simple-git-hooks"
   },
@@ -29,6 +29,7 @@
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "jest": "^26.6.3",
+    "jest-html-reporter": "^3.3.0",
     "lint-staged": "^10.5.4",
     "madge": "^4.0.2",
     "simple-git-hooks": "^2.2.0",
