--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/bromix/typescript-jest-example#readme",
   "devDependencies": {
     "@types/jest": "^26.0.20",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.23.0",
@@ -46,6 +47,7 @@
   "dependencies": {
     "eslint-config-airbnb-typescript": "^12.3.1",
     "inversify": "^5.0.5",
-    "require-json5": "^1.1.0"
+    "require-json5": "^1.1.0",
+    "uuid": "^8.3.2"
   }
 }
