--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest --collect-coverage",
     "test-debug": "jest --collect-coverage --runInBand",
     "validate": "yarn list",
-    "configure": "simple-git-hooks"
+    "configure": "simple-git-hooks",
+    "diagramDependencies": "yarn madge --extensions ts ./ -i tools/graphs/dependencies.svg && ts-node -r tsconfig-paths/register ./tools/madgeDependencies.ts"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,8 @@
     "madge": "^4.0.2",
     "simple-git-hooks": "^2.2.0",
     "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.3"
   },
   "simple-git-hooks": {
